Fixed a potential bug with firefox's resizing feature.

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -376,6 +376,7 @@ script.jeditor-image-dialog(type="text/template")
         input type="text" name="custom_width" value="{{ widthInt }}"
     input type="hidden" name="src" value="_maybe.src"
     input type="hidden" name="maxWidth" value="100%"
+    input type="hidden" name="height" value="auto"
 
 #dialog-invalid-drag title="Oops"
   p
