Make image resizing based on original size. Closes #89
The easy way was to do width: x%. However css does not support specifying
a width based on an image's original size. Fulfilling this requirement
required javascript code that dynamically retrieves the current width
and height of the original image (luckily already present as a preview
image), and using it to manually set the width and height in pixels of
the target image.

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -367,20 +367,16 @@ script.jeditor-image-dialog(type="text/template")
         option value="right" Right
     p
       label Image Size:
-      select name="width"
-        option value="auto" Original Size
-        option value="100%" Fit to screen width (100%)
-        option value="60%" Medium (60%)
-        option value="30%" Small (30%)
-        option value="<% if (!_.include(['100%','60%','30%'], width)) { print(width); } %>" data-custom="true" Custom
-      .custom-width.hide
+      select name="size"
+        option value="100" Original Size
+        option value="60" Medium (60%)
+        option value="30" Small (30%)
+        option value="<% if (!_.include([100,60,30], size)) { print(size); } %>" data-custom="true" Custom
+      .custom-size.hide
         label Enter a number from 1 to 100:
-        input type="text" name="custom_width" value="{{ widthInt }}"
+        input type="text" name="custom_size" value="{{ size }}"
     | <% } %>
-
     input type="hidden" name="src" value="_maybe.src"
-    input type="hidden" name="maxWidth" value="100%"
-    input type="hidden" name="height" value="auto"
 
 #dialog-invalid-drag title="Oops"
   p
