Fixed a bug that might happen with existing jwysiwyg images.

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -331,6 +331,7 @@ script.jeditor-image-dialog(type="text/template")
 
     | <% } else { %>
 
+    img.hide src="{{ _maybe.src }}"
     table.wphoto-wrap.preview
       tbody
         tr
