--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -613,7 +613,7 @@ div.wysiwyg ul.toolbar {
 }
 
 #dialog-confirm.jeditor-image {
-  img { max-width: 100%; max-height: 80px; vertical-align: middle; }
+  .preview img { max-width: 100%; max-height: 80px; vertical-align: middle; }
 }
 
 #builder input[name="back"] {
