--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -546,6 +546,8 @@ div.wysiwyg ul.toolbar {
   max-width: 100%;
   max-height: 80px;
   vertical-align: middle; }
+#dialog-confirm.jeditor-image input[name=custom_size] {
+  width: auto; }
 
 #builder input[name="back"] {
   margin-right: 16px;
@@ -612,8 +614,12 @@ div.plupload {
   .selected-file button {
     cursor: pointer; }
 
+button {
+  cursor: pointer; }
+
 button[disabled] {
-  padding: 1px 3px 1px 3px; }
+  padding: 1px 3px 1px 3px;
+  cursor: auto; }
 
 button[name=pick_files] {
   cursor: pointer;
