--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -614,6 +614,9 @@ div.wysiwyg ul.toolbar {
 
 #dialog-confirm.jeditor-image {
   .preview img { max-width: 100%; max-height: 80px; vertical-align: middle; }
+  input[name=custom_size] {
+    width: auto;
+  }
 }
 
 #builder input[name="back"] {
@@ -699,9 +702,10 @@ div.plupload {
   button { cursor: pointer; }
 }
 
-
+button { cursor: pointer; }
 button[disabled] {
   padding: 1px 3px 1px 3px;  
+  cursor: auto;
 }
 
 button[name=pick_files] {
