--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -361,7 +361,8 @@ pre {
   text-align: center;
   float: none;
   width: 100%;
-  border-bottom: 1px solid #1D4088; }
+  border-bottom: 1px solid #1D4088;
+  margin-bottom: 12px; }
 
 .wphoto-large.centered img {
   margin: 0 0 6px 0; }
