--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -417,6 +417,7 @@ pre {
   float: none; 
   width: 100%; 
   border-bottom: 1px solid #1D4088;
+  margin-bottom: 12px;
 }
 .wphoto-large.centered img {
     margin: 0 0 6px 0;
