--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -614,7 +614,7 @@ div.wysiwyg ul.toolbar {
 
 #dialog-confirm.jeditor-image {
   .preview img { max-width: 100%; max-height: 80px; vertical-align: middle; }
-  input[name=custom_size] {
+  input[name=size] {
     width: auto;
   }
 }
