--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -281,9 +281,12 @@ p {
     margin: 8px 0;
     padding: 8px 0;
     text-align: center;
-    button { margin: 0 10px; }
-    button[name=prev] { float: left; }
-    button[name=next] { float: right; }
+    width: 100%;
+
+    td { vertical-align: middle; }
+    td label { margin: 0 !important; }
+
+    button { margin: 0 10px; cursor: pointer; }
     button.disabled { visibility: hidden; }
   }
 
@@ -331,13 +334,11 @@ p {
     }
   }
 
-  .item.category td {
-    background: url(/images/ui/subcat-arrow.png) 100% 50% no-repeat; }
-  .item.leaf-name td {
-    background: url(/images/ui/subcat-arrow.png) 100% 50% no-repeat; }
-  .item.category, .item.leaf-name {
-    padding: 8px 20px 8px 0px;
+  .item td {
+    background: url(/images/ui/subcat-arrow.png) 100% 50% no-repeat;
     cursor: pointer; }
+  .item.category, .item.leaf-name {
+    padding: 8px 20px 8px 0px; }
   .item:first-child, .category:first-child {
     border-top: none; }
 
