Added youtube embedding.

--- a/public/stylesheets/jquery.wysiwyg.css
+++ b/public/stylesheets/jquery.wysiwyg.css
@@ -66,6 +66,7 @@ div.wysiwyg ul.toolbar li.decreaseFontSize { background-position: -40px -100px; 
 div.wysiwyg ul.toolbar li.createLink { background-position: -100px -60px; }
 div.wysiwyg ul.toolbar li.insertImage,
 div.wysiwyg ul.toolbar li.uploadImage { background-position: -100px -100px; }
+div.wysiwyg ul.toolbar li.embedYoutube { background-position: -80px -120px; }
 
 div.wysiwyg ul.toolbar li.html { background-position: -60px -60px; }
 div.wysiwyg ul.toolbar li.removeFormat { background-position: -100px -80px; }
