--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -366,9 +366,20 @@ script.jeditor-image-dialog(type="text/template")
     | <% } %>
     input type="hidden" name="src" value="_maybe.src"
 
+script.jeditor-youtube-dialog(type="text/template")
+  #dialog-confirm.jeditor-image title="Select an Image"
+    p
+      label Youtube Video Url:
+      input type="text" name="url" value=""
+    p.error.hide
+      | Invalid youtube url.
+
 #dialog-invalid-drag title="Oops"
   p
     span.ui-icon.ui-icon-alert style="float:left"
     | &nbsp; New widgets can only be added from the mobile home screen.
   p <br>
   p Please click on Home in the Mobile Tab Bar to return to the mobile home screen and try adding again.
+
+script.youtube-embed-html(type="text/template")
+  iframe class="youtube-player" type="text/html" src="http://www.youtube.com/embed/{{ vid }}?wmode=transparent" frameborder="0"
