Added page image padding

--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -28,6 +28,7 @@ a img {
   border: none; }
 
 p {
+  font-size:100%;
   margin-top: 0px;
   margin-bottom: 0px;
   -webkit-margin-before: 0em;
@@ -420,3 +421,7 @@ pre {
     }
   }
 }
+
+// WYSIWYG Photo styling
+img.yo-left  { padding: 3px 10px 0px 0px; }
+img.yo-right { padding-left: 3px 0px 0px 10px; }
