Fixed css error in img.yo-right

--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -424,4 +424,4 @@ pre {
 
 // WYSIWYG Photo styling
 img.yo-left  { padding: 3px 10px 0px 0px; }
-img.yo-right { padding-left: 3px 0px 0px 10px; }
+img.yo-right { padding: 3px 0px 0px 10px; }
