--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -362,4 +362,4 @@ img.yo-left {
   padding: 3px 10px 0px 0px; }
 
 img.yo-right {
-  padding-left: 3px 0px 0px 10px; }
+  padding: 3px 0px 0px 10px; }
