Inclued swfobject.js. IE might need this

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -74,6 +74,7 @@ html lang="en-US"
     = javascript_include_tag 'notice'
 
     / ajax file uploading
+    = javascript_include_tag "support/swfobject.js"
     = javascript_include_tag "plupload/plupload.full"
 
     - if Rails.env.production?
