Added link types to the "Insert Link" dialog in WYSIWYG editor
To make it easier for users to add functional links to their pages,
I've added a selection list of various link types to the Insert Link
dialog.

--- a/public/stylesheets/jquery.wysiwyg.css
+++ b/public/stylesheets/jquery.wysiwyg.css
@@ -83,8 +83,25 @@ background-color:white; padding:3px; margin:0;
 
 .wysiwyg label {
   float: left;
-  width: 75px;
+  padding-right: 6px;
   padding-top: 4px;
   clear: left;
 }
+
 .wysiwyg input[type=text] { float: left; }
+.wysiwyg .help-bubble { margin-left: 10px; }
+
+.wysiwyg table { width:100%; }
+.wysiwyg td.label { 
+  vertical-align: top;
+  width:1%;
+}
+
+
+
+
+
+
+
+
+
