Replaced navigation images with html
Changed backbar background to gradient, changed back button and page
arrows to text rather than arrow image.

--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -67,3 +67,4 @@ script.item-wrap type="text/template"
     | <% } %>
     td.txt-col colspan="<% print(item.wphotoUrl ? 1 : 2); %>"
       | <% print( itemTemplate({ item:item }) ); %>
+    td.nav-col &#0155;
