--- a/public/stylesheets/sass/constants.scss
+++ b/public/stylesheets/sass/constants.scss
@@ -41,3 +41,6 @@ $font-size-ul: 100%;
 $font-size-url: 150%;
 
 $widget-editor-header-padding: 0px 0px 20px 0px;
+
+$navigation-arrow-color: #587bab;
+$navigation-arrow-color: #333;
