--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -62,6 +62,7 @@ p {
   min-height: 120px;
   padding: 20px 10px;
   font-size: 16px;
+  word-break:break-word;
   label {
     margin-bottom: 2px; }
   input[type=text] {
@@ -87,6 +88,19 @@ p {
   padding: 0;
   margin: 12px 0 12px 0;
   background: url(/images/ui/bg-back-bar.png) repeat-x;
+  /* IE10 */ 
+  background-image: -ms-linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  /* Mozilla Firefox */ 
+  background-image: -moz-linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  /* Opera */ 
+  background-image: -o-linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  /* Webkit (Safari/Chrome 10) */ 
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(.5, #B8B8B8));
+  /* Webkit (Chrome 11+) */ 
+  background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  /* Proposed W3C Markup */ 
+  background-image: linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+
   color: $back-bar-color;
   .title {
     float: left;
@@ -155,14 +169,19 @@ p {
     height: 48px; } }
 
 .back-btn {
+  cursor: pointer;
+  text-align: center;
+  font-size: 30px;
+  font-weight:bold;
   float: left;
   width: 48px;
   height: 38px;
   border-right: 1px solid gray;
-  margin: 0 12px 0 1px;
+  margin: -1px 12px 0 1px;
   padding: 0;
-  background: url(/images/ui/back-btn.png) no-repeat;
-  background-position: center; }
+  //background: url(/images/ui/back-btn.png) no-repeat;
+  //background-position: center; 
+}
 
 .title {
   h2, h3 {
@@ -299,6 +318,7 @@ p {
     padding-right: 16px;
   }
 
+
   td.img-col {
     width: 10%;
     max-width: 80px;
@@ -335,8 +355,18 @@ p {
     }
   }
 
+  .item td.nav-col {
+    font-size: 30px;
+    font-weight: bold;
+    color: $navigation-arrow-color;
+    margin: 0px;
+    padding: 0px;
+    width: 1px;
+    text-alight: right;
+    vertical-align: middle;
+  }
+
   .item td {
-    background: url(/images/ui/subcat-arrow.png) 100% 50% no-repeat;
     cursor: pointer; }
   .item.category, .item.leaf-name {
     padding: 8px 20px 8px 0px; }
@@ -418,12 +448,33 @@ pre {
   text-align: center; 
   float: none; 
   width: 100%; 
-  border-bottom: 1px solid #1D4088;
-  margin-bottom: 12px;
+  //border-bottom: 1px solid #1D4088;
+  //margin-bottom: 12px;
 }
 .wphoto-large.centered img {
     margin: 0 0 6px 0;
 }
+
+.wphoto-large-separator {
+
+  height: 4px;
+  width: 100%;
+  margin-bottom: 4px;
+
+  /* IE10 */ 
+  background-image: -ms-linear-gradient(top, #D5E3F0 0%, #B3B3B3 50%, #D5E3F0 100%);
+  /* Mozilla Firefox */ 
+  background-image: -moz-linear-gradient(top, #D5E3F0 0%, #B3B3B3 50%, #D5E3F0 100%);
+  /* Opera */ 
+  background-image: -o-linear-gradient(top, #D5E3F0 0%, #B3B3B3 50%, #D5E3F0 100%);
+  /* Webkit (Safari/Chrome 10) */ 
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #D5E3F0), color-stop(.5, #B3B3B3), color-stop(1, #D5E3F0));
+  /* Webkit (Chrome 11+) */ 
+  background-image: -webkit-linear-gradient(top, #D5E3F0 0%, #B3B3B3 50%, #D5E3F0 100%);
+  /* Proposed W3C Markup */ 
+  background-image: linear-gradient(top, #D5E3F0 0%, #B3B3B3 50%, #D5E3F0 100%);
+}
+
 
 .node-list {
   .wphoto {
