Add builder.util to rest of desktop site. Closes #125

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -46,7 +46,7 @@ html lang="en-US"
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'support/jquery-1.6.2.min'
     = javascript_include_tag 'support/jquery.tooltip.v.1.1'
-    = javascript_include_tag 'util'
+    = javascript_include_tag 'util', 'builder.util'
     = javascript_include_tag 'notice'
     = yield :js
 
