--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -120,74 +120,6 @@ script.edit-icon-dialog(type="text/template")
       img src=""
       label
 
-
-script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.property-listings-edit-area.locations-edit-area(type="text/template")
-    | <% if (onHomePage === true) { %>
-    input type="button" name="beginEditing" value="Click Here to Start Editing"
-
-    | <% } else if (currentNodeType !== 'page') { %>
-    br
-
-    .crumb-wrap
-      erb:
-        <b>Editing: <span class="blue">{{ catCrumbs }}</span></b>
-
-    table.wphoto-wrap
-      tbody
-        tr
-          td
-            img src="{{ wphotoPreviewPath }}"
-          td
-            label Select a Picture...
-            br
-            .selected-file.lfloat &nbsp;
-            button name="pick_files" Browse...
-            .error
-        | <% if (wphotoPreviewPath !== '/images/no-wphoto.png') { %>
-        tr
-          td
-            a.remove-wphoto-link href="#" Remove Picture
-          td
-        | <% } %>
-
-    select name="stuff" multiple="multiple"
-      | <% for (var i=0;i<stuff.length;i++) { %>
-      option data-type="{{ stuff[i].type }}" value="{{ stuff[i]._id }}"
-        | {{ bulletTypes[ stuff[i].type ] }} {{ stuff[i].name }}
-      | <% } %>
-    br
-    
-    | <%       if (stuff.length >= 2) { %>
-    input.rfloat.down-arrow type="button" name="move_down" data-mod="1" value="&#9660;"
-    input.rfloat.up-arrow type="button" name="move_up" data-mod="-1" value="&#9650;"
-    | <%       } %>
-
-    | <%       if (isThereStuff == true) { %>
-    input type="button" name="rename" value="Rename"
-    input type="button" name="edit" value="Edit"
-    input type="button" name="delete" value="Delete"
-    | <%       } %>
-
-    br
-    .divider
-
-    input type="button" name="back" value="< Back"
-    .button-divider.lfloat
-    input type="button" name="add_cat" value="Add {{ catLabel }}"
-    input type="button" name="add_item" value="Add {{ itemLabel }}"
-
-    | <% } else { %>
-    br
-    .crumb-wrap
-      erb:
-        <b>Editing: <span class="blue">{{ catCrumbs }}</span></b>
-
-    #jeditor-wrapper
-      textarea#jeditor {{ content }}
-    br
-    input type="button" name="back" value="< Back"
-    | <% } %>
-
 = render :partial => 'builder/cat-dialog-templates'
 
 script.edit-widget-idle(type="text/template")
@@ -387,3 +319,199 @@ script.jeditor-youtube-dialog(type="text/template")
 
 script.youtube-embed-html(type="text/template")
   iframe class="youtube-player" type="text/html" src="http://www.youtube.com/embed/{{ vid }}?wmode=transparent" frameborder="0"
+
+
+/ =====================
+/ = Widget Edit Pages =
+/ =====================
+script.video-edit-area.full-website-edit-area.news-edit-area.photo-bucket-edit-area.blog-edit-area.donate-edit-area.reviews-edit-area(type="text/template")
+  label Your {{ subHelpText }} URL*:
+  input(name="url" type="text" value="{{ _maybe.url }}")
+
+script.link-edit-area(type="text/template")
+  label Website URL*:
+  input(name="url" type="text" value="{{ _maybe.url }}")
+
+script.event-calendar-edit-area(type="text/template")
+  label Your {{ subHelpText }} URL*:
+  textarea name="url" type="text" rows="5" cols="30" {{ _maybe.url }}
+
+script.facebook-edit-area.twitter-edit-area.picasa-edit-area.flickr-edit-area(type="text/template")
+  b.current_link_label Current Link
+  p
+    a href="{{ url }}" target="_blank" {{ anchorText }}
+  label Your {{ subHelpText }}*:
+  input(name="userId" type="text" value="{{ _maybe.userId }}")
+
+script.custom-page-edit-area.about-us-edit-area(type="text/template")
+  #jeditor-wrapper
+    textarea#jeditor rows=8 cols=8 {{ _maybe.content }}
+
+script.call-us-edit-area(type="text/template")
+  label Your phone number*:
+  input(name="phone" type="text" value="{{ _maybe.phone }}")
+
+script.leave-a-message-edit-area(type="text/template")
+  label Your Email Address*:
+  input(name="email" type="text" value="{{ _maybe.email }}")
+
+script.call-me-back-edit-area(type="text/template")
+  label Your Email Address*:
+  input(name="email" type="text" value="{{ _maybe.email }}")
+
+script.tell-a-friend-edit-area(type="text/template")
+  p This widget appears as an icon on your mobile site and makes it easy for visitors to share your site with their friends.
+
+script.booking-request-edit-area(type="text/template")
+  label Your Email Address*:
+  input(name="email" type="text" value="{{ _maybe.email }}")
+
+script.keep-me-informed-edit-area(type="text/template")
+  label Your Email Address*:
+  input name="email" type="text" value="{{ _maybe.email }}"
+  br
+  .opt-in-select
+    label Please select at least one of the following*:
+    br
+    | <% if (_maybe.optForEmails) { %>
+    input name="optForEmails" type="checkbox" checked="checked"
+    | <% } else { %>
+    input name="optForEmails" type="checkbox"
+    | <% } %>
+    label Allow users to opt-in for emails.
+    br
+    | <% if (_maybe.optForTexts) { %>
+    input name="optForTexts" type="checkbox" checked="checked"
+    | <% } else { %>
+    input name="optForTexts" type="checkbox"
+    | <% } %>
+    label Allow users to opt-in for text messages.
+
+script.business-hours-edit-area(type="text/template")
+  .double-time-input
+    input type="checkbox" name="doubleTime"
+    b Specify two sets of hours for each day.
+
+  .input-area class="{{ _maybe.doubleTimeChecked }}"
+    - %w(mon tue wed thu fri sat sun).each do |day|
+      .day-hours day=day class="{{ _maybe.#{day}Closed }}"
+        .day-name = long_day_name day
+        .day-enabled.lfloat
+          input type="checkbox" day=day name="#{day}Enabled"
+        .times
+          - 2.times do |i|
+            div class="t#{i}"
+              input.hour.from type="text" value="{{ #{day}FromHours[#{i}] }}"
+              label to
+              input.hour.to type="text" value="{{ #{day}ToHours[#{i}] }}"
+          div class="closed" Closed
+        .clearfix
+  .clearfix
+
+script.find-us-edit-area(type="text/template")
+  label Address 1*:
+  input name="addr1" type="text" value="{{ _maybe.addr1 }}"
+  br
+  label Address 2:
+  input name="addr2" type="text" value="{{ _maybe.addr2 }}"
+  br
+  label City*:
+  input name="city" type="text" value="{{ _maybe.city }}"
+  br
+  label State / Province / Territory:
+  input name="state" type="text" value="{{ _maybe.state }}"
+  br
+  label Zip / Postal Code:
+  input name="zip" type="text" value="{{ _maybe.zip }}"
+  br
+  label Country*:
+  br
+  select name="country"
+    = render 'builder/country-options'
+  br
+
+script.coupon-edit-area(type="text/template")
+  label Deal Name*:
+  input(name="couponName" type="text" value="{{ _maybe.couponName }}")
+  br
+  label Expiration Date:
+  input(name="expire" type="text" value="{{ _maybe.expire }}")
+  br
+  label Description*:
+  textarea(name="description" type="text") {{ _maybe.description }}
+
+script.calendar-edit-area(type="text/template")
+  label Current calendar link:
+  .url
+    a href="{{ showUrl }}" target="_blank" {{ showUrl }}
+  input(type="hidden" name="url" value="{{ _maybe.url }}")
+  
+  label Paste your "Embed this Calendar" link here:
+  textarea(name="paste" type="text") {{ _maybe.description }}
+
+script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.property-listings-edit-area.locations-edit-area(type="text/template")
+    | <% if (onHomePage === true) { %>
+    input type="button" name="beginEditing" value="Click Here to Start Editing"
+
+    | <% } else if (currentNodeType !== 'page') { %>
+    br
+
+    .crumb-wrap
+      erb:
+        <b>Editing: <span class="blue">{{ catCrumbs }}</span></b>
+
+    table.wphoto-wrap
+      tbody
+        tr
+          td
+            img src="{{ wphotoPreviewPath }}"
+          td
+            label Select a Picture...
+            br
+            .selected-file.lfloat &nbsp;
+            button name="pick_files" Browse...
+            .error
+        | <% if (wphotoPreviewPath !== '/images/no-wphoto.png') { %>
+        tr
+          td
+            a.remove-wphoto-link href="#" Remove Picture
+          td
+        | <% } %>
+
+    select name="stuff" multiple="multiple"
+      | <% for (var i=0;i<stuff.length;i++) { %>
+      option data-type="{{ stuff[i].type }}" value="{{ stuff[i]._id }}"
+        | {{ bulletTypes[ stuff[i].type ] }} {{ stuff[i].name }}
+      | <% } %>
+    br
+    
+    | <%       if (stuff.length >= 2) { %>
+    input.rfloat.down-arrow type="button" name="move_down" data-mod="1" value="&#9660;"
+    input.rfloat.up-arrow type="button" name="move_up" data-mod="-1" value="&#9650;"
+    | <%       } %>
+
+    | <%       if (isThereStuff == true) { %>
+    input type="button" name="rename" value="Rename"
+    input type="button" name="edit" value="Edit"
+    input type="button" name="delete" value="Delete"
+    | <%       } %>
+
+    br
+    .divider
+
+    input type="button" name="back" value="< Back"
+    .button-divider.lfloat
+    input type="button" name="add_cat" value="Add {{ catLabel }}"
+    input type="button" name="add_item" value="Add {{ itemLabel }}"
+
+    | <% } else { %>
+    br
+    .crumb-wrap
+      erb:
+        <b>Editing: <span class="blue">{{ catCrumbs }}</span></b>
+
+    #jeditor-wrapper
+      textarea#jeditor {{ content }}
+    br
+    input type="button" name="back" value="< Back"
+    | <% } %>
