Added page_title class to page title to allow for custom css

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -282,7 +282,7 @@
     | <% } %>
   
   script.page_tree-page(type="text/template")
-    h3 {{ title }}
+    h3.page_title {{ title }}
     .leaf-content {{ content }}
     .clearfix
 
