--- a/public/stylesheets/jwysiwyg.css
+++ b/public/stylesheets/jwysiwyg.css
@@ -1,14 +1,21 @@
 /* css for jwysiwyg */
 body {
-  font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
-  font-size: 16px;
-  word-wrap:break-word;
+	font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
+	font-size: 16px; 
+	margin: 0px 0px 0px 0px;
+	padding: 0px 4px 0px 0px;  
+	word-wrap: break-word;
 }
 
 p {
-  margin-bottom: 0;
-  -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
+	margin-top: 0;
+	margin-bottom: 0;
+	-webkit-margin-before: 0em;
+	-webkit-margin-after: 0em;
+}
+
+h1, h2, h3, ul {
+	margin: 0px; 
 }
 
 img.yo { cursor: pointer; }
