--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -36,9 +36,11 @@ p {
 }
 
 .leaf-content {
-  h1, h2, h3, ul {
+  h1, h2, h3, ul, ol {
     margin: 0px;
   }
+
+  ul, ol { margin-top: 6px; }
 
   h1.page_title {
     margin-bottom: 6px;
