--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -14,10 +14,10 @@ p {
 
 .leaf-content h1, .leaf-content h2, .leaf-content h3, .leaf-content ul, .leaf-content ol {
   margin: 0px; }
+.leaf-content h1, .leaf-content h2, .leaf-content h3 {
+  margin-bottom: 6px; }
 .leaf-content ul, .leaf-content ol {
   margin-top: 6px; }
-.leaf-content h1.page_title {
-  margin-bottom: 6px; }
 
 .input-wrap p {
   margin-bottom: 1em; }
