--- a/public/stylesheets/jwysiwyg.css
+++ b/public/stylesheets/jwysiwyg.css
@@ -14,10 +14,8 @@ p {
 	-webkit-margin-after: 0em;
 }
 
-h1, h2, h3, ul, ol {
-	margin: 0px; 
-}
-
+h1, h2, h3, ul, ol { margin: 0px; }
+h1, h2, h3 { margin-bottom: 6px; }
 ul, ol { margin-top: 6px; }
 
 img.yo { cursor: pointer; }
