--- a/public/stylesheets/jwysiwyg.css
+++ b/public/stylesheets/jwysiwyg.css
@@ -14,9 +14,19 @@ p {
 	-webkit-margin-after: 0em;
 }
 
-h1, h2, h3, ul, ol { margin: 0px; }
-h1, h2, h3 { margin-bottom: 6px; }
-ul, ol { margin-top: 6px; }
+ul, ol {
+	margin-top: 8px;
+	margin-bottom: 8px;
+	-webkit-margin-before: 8px;
+	-webkit-margin-after: 8px;   
+}
+
+li {
+	margin-bottom: 4px; 
+	-webkit-margin-after: 4px;   
+}
+
+h1, h2, h3 { margin: 4px 0px 4px 0px; }
 
 img.yo { cursor: pointer; }
 img.yo-left  { padding: 3px 10px 0px 0px; }
