--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -12,12 +12,18 @@ p {
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em; }
 
-.leaf-content h1, .leaf-content h2, .leaf-content h3, .leaf-content ul, .leaf-content ol {
+.leaf-content h1, .leaf-content h2, .leaf-content h3 {
   margin: 0px; }
 .leaf-content h1, .leaf-content h2, .leaf-content h3 {
   margin-bottom: 6px; }
 .leaf-content ul, .leaf-content ol {
-  margin-top: 6px; }
+  margin-top: 8px;
+  margin-bottom: 8px;
+  -webkit-margin-before: 8px;
+  -webkit-margin-after: 8px; }
+.leaf-content li {
+  margin-bottom: 4px;
+  -webkit-margin-after: 4px; }
 
 .input-wrap p {
   margin-bottom: 1em; }
