--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -36,9 +36,18 @@ p {
 }
 
 .leaf-content {
-  h1, h2, h3, ul, ol { margin: 0px; }
-  h1, h2, h3 { margin-bottom: 6px;}
-  ul, ol { margin-top: 6px; }
+  h1, h2, h3 { margin: 0px; }
+  h1, h2, h3 { margin-bottom: 6px; }
+  ul, ol {
+    margin-top: 8px;
+    margin-bottom: 8px;
+    -webkit-margin-before: 8px;
+    -webkit-margin-after: 8px;   
+  }
+  li {
+    margin-bottom: 4px; 
+    -webkit-margin-after: 4px;   
+  }
 }
 
 .input-wrap p {
