--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -520,7 +520,7 @@ div.wysiwyg ul.toolbar {
   max-height: 235px;
   margin: 0 2px 8px -3px;
   padding: 10px 0 10px 0;
-  border-bottom: 1px solid #ccc;
+  border: 1px solid #ccc;
   overflow: auto; }
   #dialog-confirm.edit-icon .icons img {
     border: 2px solid #fff;
@@ -539,8 +539,30 @@ div.wysiwyg ul.toolbar {
   position: relative;
   top: -20px;
   left: 10px; }
+#dialog-confirm.edit-icon .selected-label {
+  font-size: 120%;
+  float: left; }
 #dialog-confirm.edit-icon p {
+  font-size: 120%;
   padding: 4px 0px 0px 0px; }
+#dialog-confirm.edit-icon table.change-icon-separator {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 10px 0px 4px 0px; }
+  #dialog-confirm.edit-icon table.change-icon-separator td.l {
+    width: 5%;
+    padding-left: 4px; }
+  #dialog-confirm.edit-icon table.change-icon-separator td.r {
+    width: 100%;
+    padding-right: 16px; }
+  #dialog-confirm.edit-icon table.change-icon-separator div.label {
+    font-size: 120%;
+    margin: 0px 4px 0px 2px;
+    white-space: nowrap; }
+  #dialog-confirm.edit-icon table.change-icon-separator div.l, #dialog-confirm.edit-icon table.change-icon-separator div.r {
+    border-top: 4px solid #b3b3b3; }
+#dialog-confirm.edit-icon table.first {
+  margin-top: 0px; }
 
 #dialog-confirm.jeditor-image .preview img {
   max-width: 100%;
