Added margin to .selected-label

--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -611,6 +611,7 @@ div.wysiwyg ul.toolbar {
   .selected-label {
     font-size: 120%;
     float: left;
+    margin: 4px 10px 0px 0px;
   }
 
   p { 
