--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -13,9 +13,9 @@ ul
   li.option.edit-settings
     .icon
     a href=builder_main_path(:anchor => 'edit-settings') General Settings
-  li.option.edit-keywords class=active?('booster',active)
+  li.option.edit-advanced-settings
     .icon
-    a href=builder_main_path(:anchor => 'edit-keywords') Traffic Booster
+    a href=builder_main_path(:anchor => 'edit-advanced-settings') Advanced Settings
   li.option.edit-tab-bar
     .icon
     a href=builder_main_path(:anchor => 'edit-tab-bar') Edit Mobile Tab Bar
