--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -13,6 +13,7 @@ html lang="en-US"
     = stylesheet_link_tag 'flick/jquery-ui-1.8.11.custom'
     = stylesheet_link_tag 'jquery.wysiwyg'
     = stylesheet_link_tag 'colorpicker'
+    = render 'mobile/custom-style'
     erb:
       <!--[if IE 7]>
       <%= stylesheet_link_tag 'ie' %>
