--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -17,6 +17,7 @@ window.g = {
     booking: "<%=escape_javascript @company.booking_email %>"
   },
   keywords: "<%=escape_javascript @company.keywords %>",
+  header_color: "<%=escape_javascript @company.settings.header_color %>",
   MAX_TEXT_CHARS: <%= @max_text_chars || -1 %>,
   MAX_COMPANY_NAME_LENGTH: <%= MAX_COMPANY_NAME_LENGTH %>,
   openEditSettings: <%= @open_edit_settings || false %>,
