--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -725,6 +725,18 @@ div.wysiwyg ul.toolbar {
   }
 }
 
+.color-picker {
+  background: transparent url(/images/ui/color-select.png) no-repeat;
+  height: 36px;
+  width: 72px;
+  position: relative;
+}
+.color-picker div {
+  position: absolute;
+  top: 3px; left: 3px;
+  width: 66px; height: 30px;
+  background: url(/images/ui/color-select.png) center;
+}
 
 div.plupload {
   cursor: pointer;
